--- a/.stickler.yml
+++ b/.stickler.yml
@@ -8,6 +8,10 @@ linters:
 files:
   ignore:
       - 'dist/*'
+      - 'js/bootstrap*'
+      - 'js/jquery*'
+      - 'css/bootstrap*'
+      - 'css/normalize.css'
 
 # PLEASE DO NOT enable auto fixing options
 # if you need extra support from you linter - do it in your local env as described in README for this config
